[tool.poetry]
name = "advent2020"
version = "0.1.0"
description = ""
authors = ["two sigma plus <randomsamples@github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
